--- a/data/common.yaml
+++ b/data/common.yaml
@@ -19,7 +19,7 @@ fluentbit::manage_storage_dir: true
 
 fluentbit::binary_file: '/opt/fluent-bit/bin/fluent-bit'
 fluentbit::data_dir: '/opt/fluent-bit/db'
-fluentbit::config_file: '/etc/fluent-bit/fluent-bit.yaml'
+fluentbit::config_file: '/etc/fluent-bit/fluent-bit.conf'
 fluentbit::config_file_mode: '0644'
 fluentbit::flush: 5
 fluentbit::grace: 5
