--- a/data/common.yaml
+++ b/data/common.yaml
@@ -21,6 +21,7 @@ fluentbit::binary_file: '/opt/fluent-bit/bin/fluent-bit'
 fluentbit::data_dir: '/opt/fluent-bit/db'
 fluentbit::config_file: '/etc/fluent-bit/fluent-bit.conf'
 fluentbit::config_file_mode: '0644'
+fluentbit::config_folder_mode: '0750'
 fluentbit::flush: 5
 fluentbit::grace: 5
 fluentbit::daemon: false
